<resources>
    <string name="app_name">Esmeraldita</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Username</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="bAddCar">Add</string>
    <string name="bRemoveCar">Remove</string>
    <string name="add_car">ADD CAR</string>
    <string name="plate">Plate</string>
    <string name="brand">Brand</string>
    <string name="color">Color</string>
    <string name="active">Active</string>
    <string name="selectDate">Select Date...</string>
    <string name="imagenes">Imagenes</string>
</resources>
